--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,8 @@ name: laams_push
 description: A declarative URI-based router for advanced navigation in Flutter, equipped with deep linking, authentication, animated route transitions and many more. Developed with ease of use in mind.
 version: 0.0.1
 homepage: https://laams.io
+repository: https://github.com/laams/laams_push
+issue_tracker: https://github.com/laams/laams_push/issues
 
 environment:
   sdk: ">=2.15.0 <3.0.0"
