--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: laams_push
-description: A declarative URI-based router for advanced navigation in Flutter, equipped with deep linking, authentication, animated route transitions and many more. Developed with ease of use in mind.
-version: 0.0.1
+description: A declarative URI-based router for advanced navigation in Flutter, tailored for deep linking, user auth-based navigation, custom transition animations, ease of use, and many more.
+version: 0.0.2
 homepage: https://laams.io
 repository: https://github.com/laams/laams_push
 issue_tracker: https://github.com/laams/laams_push/issues
