--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
+  provider: ^6.0.2
 
 dev_dependencies:
   flutter_test:
@@ -18,16 +19,13 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   laams_push:
     path: "../"
-  provider:
 
 flutter:
   uses-material-design: true
-
   # Local Assets:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
   # Local Fonts:
   # fonts:
   #   - family: Schyler
