--- a/example/web/manifest.json
+++ b/example/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "laams_push_example",
-    "short_name": "laams_push_example",
+    "name": "example",
+    "short_name": "example",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "Laams Push Example",
+    "description": "A new Flutter project.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
